# cc-search

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
cmd/cc-search/: main.go  query_test.go  update_test.go
commands/: search-history.md
docs/superpowers/plans/: 2026-04-26-semantic-search-implementation.md  2026-05-06-go-rewrite-implementation.md
docs/superpowers/specs/: 2026-04-26-semantic-search-plugin-design.md  2026-05-06-go-rewrite-design.md
internal/assets/: assets.go
internal/embedding/: embedding.go  embedding_test.go  tokenizer.go  tokenizer_test.go
internal/ingest/: chunk.go  ingest.go  ingest_test.go  parse.go
internal/search/: search.go  search_test.go
internal/store/: store.go  store_test.go
scripts/: export-model.py  install.sh  run-cc-search.sh  test-run-cc-search.sh
skill/: search-history.md
skills/search-history/: SKILL.md
skills/update-cli/: SKILL.md
src/cc_search/: chunker.py  cli.py  db.py  indexer.py  searcher.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_db.py  test_indexer.py  test_searcher.py
