[project]
name = "cc-search"
version = "0.2.0"
description = "Semantic search over Claude Code conversation history"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.1",
    "click>=8.1.0",
]

[project.scripts]
cc-search = "cc_search.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
